# SoGLSL

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  submodules.init.txt
cmake/: 3rdparty.cmake  assimp.cmake  ctools.cmake  curl.cmake  efsw.cmake  glfw.cmake  glslang.cmake  googletest.cmake  iagp.cmake  imguipack.cmake  kissfft.cmake  openxr.cmake  rtmidi.cmake  sdl.cmake  stb.cmake  tracy.cmake
cmake/Maintained/: ctools.cmake  iagp.cmake  imguipack.cmake  maintained.cmake
cmake/NotMaintained/: assimp.cmake  curl.cmake  efsw.cmake  kissfft.cmake  miniaudio.cmake  notmaintained.cmake  openxr.cmake  picojson.cmake  rtmidi.cmake  sdl.cmake  stb.cmake  tracy.cmake
src/Buffer/: ExportBuffer.cpp  ExportBuffer.h  FloatBuffer.cpp  FloatBuffer.h  FrameBuffer.cpp  FrameBuffer.h  FrameBufferAttachment.cpp  FrameBufferAttachment.h  FrameBuffersPipeLine.cpp  FrameBuffersPipeLine.h  pingpong.cpp  pingpong.h
src/CodeTree/: CodeTree.cpp  CodeTree.h  CodeTreeGlobals.h  ShaderKey.cpp  ShaderKey.h  ShaderKeyConfigSwitcherUnified.cpp  ShaderKeyConfigSwitcherUnified.h
src/CodeTree/Parsing/: SectionCode.cpp  SectionCode.h  ShaderStageParsing.cpp  ShaderStageParsing.h  UniformParsing.cpp  UniformParsing.h
src/CodeTree/SyntaxErrors/: LineFileErrors.cpp  LineFileErrors.h  SyntaxErrors.cpp  SyntaxErrors.h
src/Gui/: CustomGuiWidgets.cpp  CustomGuiWidgets.h  GuiBackend.cpp  GuiBackend.h
src/Headers/: RenderPackHeaders.h
src/Helper/: ImplementationInit.cpp  ImplementationInit.h  InterfacePanes.cpp  InterfacePanes.h  NaturalSort.cpp  NaturalSort.h
src/Importer/: Format_GlslSandbox.h  Format_ShaderToy.h  Format_VertexShaderArt.h  ImporterFromShadertoy.cpp  ImporterFromShadertoy.h  ImporterFromWxShade.cpp  ImporterFromWxShade.h  NetCodeRetriever.cpp  NetCodeRetriever.h  ShaderUrlLoader.cpp  ShaderUrlLoader.h  ShadertoyBackupFileImportDlg.cpp  ShadertoyBackupFileImportDlg.h
src/Interfaces/: CameraInterface.h  MidiInterface.h  MouseInterface.h  RenderingInterface.h  SubSystemInterface.h  SystemInterface.h  WidgetInterface.h
src/Manager/: AssetManager.cpp  AssetManager.h  HelpManager.cpp  HelpManager.h
src/Mesh/Gui/: GuiModel.cpp  GuiModel.h
src/Mesh/Model/: BaseModel.cpp  BaseModel.h  PNCMesh.cpp  PNCMesh.h  PNCModel.cpp  PNCModel.h  PNTBTCMesh.cpp  PNTBTCMesh.h  PNTBTCModel.cpp  PNTBTCModel.h  PNTCModel.cpp  PNTCModel.h  PointModel.cpp  PointModel.h  QuadModel.cpp  QuadModel.h
src/Mesh/Operations/: MeshLoader.cpp  MeshLoader.h  MeshSaver.cpp  MeshSaver.h
src/Mesh/Utils/: VertexStruct.cpp  VertexStruct.h
src/Profiler/: TracyProfiler.h
src/Renderer/: CommandBuffer.cpp  CommandBuffer.h  RenderPack.cpp  RenderPack.h  Shader.cpp  Shader.h
src/Res/: CustomFont.cpp  CustomFont.h  CustomFont2.cpp  CustomFont2.h  CustomFontToolBar.cpp  CustomFontToolBar.h  CustomFontToolBar.ifs  CustomFonts.ifs  Roboto_Medium.h
src/Res/fonts/: config.xml  imgui.ini
src/Systems/: CameraSystem.cpp  CameraSystem.h  CurlHelper.cpp  CurlHelper.h  FeedbackSender.cpp  FeedbackSender.h  FilesTrackerSystem.cpp  FilesTrackerSystem.h  GamePadSystem.cpp  GamePadSystem.h  GizmoSystem.cpp  GizmoSystem.h  MidiSystem.cpp  MidiSystem.h  RecentFilesSystem.cpp  RecentFilesSystem.h  RenderDocApp.h  RenderDocController.cpp  RenderDocController.h  ScreenGrabber.cpp  ScreenGrabber.h  SoundSystem.cpp  SoundSystem.h  TimeLineSystem.cpp  TimeLineSystem.h
src/Systems/Interfaces/: CameraInterface.h  MidiInterface.h  MouseInterface.h  WidgetInterface.h
src/Texture/: Texture2D.cpp  Texture2D.h  Texture3D.cpp  Texture3D.h  TextureCube.cpp  TextureCube.h  TextureSound.cpp  TextureSound.h
src/Uniforms/: UniformHelper.cpp  UniformHelper.h  UniformVariant.cpp  UniformVariant.h  UniformWidgets.cpp  UniformWidgets.h  UniformsMultiLoc.cpp  UniformsMultiLoc.h
src/VR/Backend/: VRActions.cpp  VRActions.h  VRBackend.cpp  VRBackend.h
src/VR/Backend/Controllers/: Controller_Kronos.cpp  Controller_Kronos.h  Controller_OculusTouch.cpp  Controller_OculusTouch.h  Controller_ValveIndex.cpp  Controller_ValveIndex.h
src/VR/Backend/Controllers/Abstract/: ControllerAbstract.h
src/VR/Gui/: VRGui.cpp  VRGui.h
src/VR/Utils/: VRUtils.cpp  VRUtils.h
src/uTypes/: uTypes.cpp  uTypes.h
